[package]
name = "wttrbar"
version = "0.12.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["unstable-locales"] }
clap = { version = "4.5.21", features = ["derive"] }
reqwest = { version = "0.12.9", default-features = false, features = [
  "blocking",
  "json",
  "rustls-tls",
] }
rustls-platform-verifier = "0.6.0"
serde_json = "1.0.133"
