[package]
name = "wttrbar"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["unstable-locales"] }
clap = { version = "4.5.21", features = ["derive"] }
serde_json = "1.0.133"
ureq = { version = "3.3.0", features = ["rustls"] }
